--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -5,35 +5,50 @@
     android:layout_height="match_parent"
     android:background="@color/appBackgroundColor"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:background="@color/newsItemBackgroundColor"
-        card_view:cardCornerRadius="20dp">
+        android:layout_weight="1">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp">
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    card_view:cardCornerRadius="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:background="@color/newsItemBackgroundColor">
 
                 <TextView
                     android:id="@+id/news_detail_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingLeft="8dp"
                     android:text="_title"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="48dp" />
+                    android:textSize="40dp" />
 
                 <TextView
                     android:id="@+id/news_detail_author"
@@ -53,7 +68,7 @@
                     <ImageView
                         android:id="@+id/news_detail_picture"
                         android:layout_width="match_parent"
-                        android:layout_height="360dp"
+                        android:layout_height="280dp"
                         android:src="@drawable/ic_menu_send" />
                 </android.support.v7.widget.CardView>
 
@@ -85,30 +100,32 @@
                     android:paddingLeft="8dp"
                     android:text="_main text"
                     android:textSize="16dp" />
+                </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp" />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="8dp"
+                    card_view:cardCornerRadius="8dp">
 
 
+                    <Button
+                        android:id="@+id/news_detail_back_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorAccent"
+                        android:text="Tilbage" />
+                </android.support.v7.widget.CardView>
             </LinearLayout>
+
         </ScrollView>
     </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="18dp" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:padding="8dp"
-        card_view:cardCornerRadius="8dp">
-
-
-        <Button
-            android:id="@+id/news_detail_back_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            android:text="Tilbage" />
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
