--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -11,13 +11,14 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
             android:paddingBottom="16dp"
             android:paddingTop="16dp">
 
@@ -39,6 +40,7 @@
                     android:orientation="vertical"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
+                    android:paddingBottom="8dp"
                     android:background="@color/newsItemBackgroundColor">
 
                 <TextView
@@ -48,7 +50,7 @@
                     android:gravity="center"
                     android:text="_title"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="40dp" />
+                    android:textSize="32dp" />
 
                 <TextView
                     android:id="@+id/news_detail_author"
@@ -79,6 +81,7 @@
                     android:gravity="left"
                     android:paddingLeft="8dp"
                     android:text="_picture text"
+                    android:textSize="12dp"
                     android:textStyle="italic" />
 
                 <TextView
@@ -88,7 +91,7 @@
                     android:gravity="left"
                     android:paddingLeft="8dp"
                     android:text="_Headline"
-                    android:textSize="36dp"
+                    android:textSize="24dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -106,6 +109,11 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="18dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
