--- a/app/src/main/res/layout/activity_commercial_detail.xml
+++ b/app/src/main/res/layout/activity_commercial_detail.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/commercial_detail_title"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="_Title"/>
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/commercial_detail_picture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_camera"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/commercial_detail_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="_text"/>
+            <TextView
+                android:id="@+id/commercial_detail_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="_Title" />
 
+            <ImageView
+                android:id="@+id/commercial_detail_picture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_menu_camera" />
+
+            <TextView
+                android:id="@+id/commercial_detail_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="_text" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/commercial_detail_picture_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
