--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
+    android:paddingTop="?attr/actionBarSize"
     >
 
     <android.support.v7.widget.CardView
@@ -127,8 +128,9 @@
                         android:id="@+id/news_detail_back_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorAccent"
-                        android:text="Tilbage" />
+                        android:background="@color/colorPrimaryDark"
+                        android:text="Tilbage"
+                        android:textColor="@color/white"/>
                 </android.support.v7.widget.CardView>
             </LinearLayout>
 
