--- a/app/src/main/res/layout/dialog_commercial.xml
+++ b/app/src/main/res/layout/dialog_commercial.xml
@@ -36,7 +36,8 @@
                     android:gravity="center"
                     android:text="_dialog title"
                     android:textSize="36dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"/>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="wrap_content"
@@ -98,7 +99,8 @@
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:background="@color/commercialDialogPossitivButtonColor"
-                        android:text="_Positive" />
+                        android:text="_Positive"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -124,7 +126,8 @@
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:background="@color/commercialDialogNegativeButtonColor"
-                        android:text="_Negative" />
+                        android:text="_Negative"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
