--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff99ff</color>
-    <color name="colorPrimaryDark">#05ff99</color>
+    <color name="colorPrimary">#00b300</color>
+    <color name="colorPrimaryDark">#008000</color>
     <color name="colorAccent">#ff3399</color>
 
     <!-- Generic -->
@@ -12,8 +12,8 @@
     <color name="newsItemBackgroundColor">#f0f0f0</color>
 
     <!--Commercial -->
-    <color name="commercialDialogPossitivButtonColor">#00ff00</color>
-    <color name="commercialDialogNegativeButtonColor">#ff0000</color>
+    <color name="commercialDialogPossitivButtonColor">#008000</color>
+    <color name="commercialDialogNegativeButtonColor">#595959</color>
     <color name="commercialDialogBackgroundColor">#e6e6e6</color>
     <color name="commercialDialogColor">#cccccc</color>
 
