--- a/app/src/main/res/layout/activity_commercial_detail.xml
+++ b/app/src/main/res/layout/activity_commercial_detail.xml
@@ -18,19 +18,25 @@
                 android:id="@+id/commercial_detail_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="_Title" />
+                android:text="_Title"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textSize="32dp"/>
 
             <ImageView
                 android:id="@+id/commercial_detail_picture"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="280dp"
+                android:layout_height="280dp"
+                android:layout_gravity="center"
                 android:src="@drawable/ic_menu_camera" />
 
             <TextView
                 android:id="@+id/commercial_detail_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="_text" />
+                android:text="_text"
+                android:textSize="16dp"/>
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/commercial_detail_picture_pager"
