--- a/app/src/main/res/layout/activity_moneytransfer.xml
+++ b/app/src/main/res/layout/activity_moneytransfer.xml
@@ -6,6 +6,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/blue"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
@@ -20,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:gravity="center"
-            android:text="_Konto"
+            android:text="Saldo"
             android:textColor="@color/black"
             android:textSize="24dp"
             android:textStyle="italic" />
