--- a/app/src/main/res/layout/activity_moneytransfer.xml
+++ b/app/src/main/res/layout/activity_moneytransfer.xml
@@ -7,7 +7,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/blue"></LinearLayout>
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/money_transfer_fun_money"
+            android:text="Hareskov dollars"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:layout_weight="1"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/money_transfer_real_money"
+            android:text="Rigtige penge"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
